--- a/themes/bootstrap3/templates/holds/list.phtml
+++ b/themes/bootstrap3/templates/holds/list.phtml
@@ -37,17 +37,17 @@
               <div class="btn-group">
                 <input id="cancelSelected" name="cancelSelected" type="submit" value="<?=$this->transEscAttr('hold_cancel_selected') ?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-lightbox-ignore>
                 <ul class="dropdown-menu">
-                  <li class="disabled"><a><?=$this->transEsc('confirm_hold_cancel_selected_text') ?></a></li>
-                  <li><a href="#" id="confirm_cancel_selected_yes"><?=$this->transEsc('confirm_dialog_yes') ?></a></li>
-                  <li><a href="#" class="confirm_cancel_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
+                  <li><span class="dropdown-header"><?=$this->transEsc('confirm_hold_cancel_selected_text') ?></span></li>
+                  <li><a href="#" id="confirm_cancel_selected_yes" class="dropdown-item"><?=$this->transEsc('confirm_dialog_yes') ?></a></li>
+                  <li><a href="#" class="dropdown-item confirm_cancel_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
                 </ul>
               </div>
               <div class="btn-group">
                 <input id="cancelAll" name="cancelAll" type="submit" value="<?=$this->transEscAttr('hold_cancel_all') ?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-lightbox-ignore>
                 <ul class="dropdown-menu">
-                  <li class="disabled"><a><?=$this->transEsc('confirm_hold_cancel_all_text') ?></a></li>
-                  <li><a href="#" id="confirm_cancel_all_yes"><?=$this->transEsc('confirm_dialog_yes') ?></a></li>
-                  <li><a href="#" class="confirm_cancel_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
+                  <li><span class="dropdown-header"><?=$this->transEsc('confirm_hold_cancel_all_text') ?></span></li>
+                  <li><a href="#" id="confirm_cancel_all_yes" class="dropdown-item"><?=$this->transEsc('confirm_dialog_yes') ?></a></li>
+                  <li><a href="#" class="dropdown-item confirm_cancel_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
                 </ul>
               </div>
             <?php endif; ?>
