--- a/themes/bootstrap3/templates/myresearch/checkedout.phtml
+++ b/themes/bootstrap3/templates/myresearch/checkedout.phtml
@@ -52,18 +52,18 @@
           <div class="btn-group">
             <input type="submit" id="renewSelected" name="renewSelected" value="<?=$this->transEscAttr('renew_selected')?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-lightbox-ignore>
             <ul class="dropdown-menu">
-              <li class="disabled"><a><?=$this->transEsc('confirm_renew_selected_text')?></a></li>
-              <li><a href="#" id="confirm_renew_selected_yes"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
-              <li><a href="#" class="confirm_renew_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
+              <li><span class="dropdown-header"><?=$this->transEsc('confirm_renew_selected_text')?></span></li>
+              <li><a href="#" id="confirm_renew_selected_yes" class="dropdown-item"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
+              <li><a href="#" class="dropdown-item confirm_renew_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
             </ul>
           </div>
           <?php if ($renewAll): ?>
             <div class="btn-group">
               <input type="submit" id="renewAll" name="renewAll" value="<?=$this->transEscAttr('renew_all')?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown" data-lightbox-ignore>
               <ul class="dropdown-menu">
-                <li class="disabled"><a><?=$this->transEsc('confirm_renew_all_text')?></a></li>
-                <li><a href="#" id="confirm_renew_all_yes"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
-                <li><a href="#" class="confirm_renew_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
+                <li><span class="dropdown-header"><?=$this->transEsc('confirm_renew_all_text')?></span></li>
+                <li><a href="#" id="confirm_renew_all_yes" class="dropdown-item"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
+                <li><a href="#" class="dropdown-item confirm_renew_no"><?=$this->transEsc('confirm_dialog_no')?></a></li>
               </ul>
             </div>
           <?php endif; ?>
