--- a/themes/bootstrap3/templates/cart/cart.phtml
+++ b/themes/bootstrap3/templates/cart/cart.phtml
@@ -70,8 +70,8 @@
             <span class="icon-link__label"><?=$this->transEsc('Delete')?></span>
           </button>
           <ul class="dropdown-menu" role="menu" aria-labelledby="cart-delete-label">
-            <li><a id="cart-confirm-delete" title="<?=$this->transEscAttr('confirm_delete')?>"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
-            <li><a><?=$this->transEsc('confirm_dialog_no')?></a></li>
+            <li><a id="cart-confirm-delete" class="dropdown-item" title="<?=$this->transEscAttr('confirm_delete')?>"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
+            <li><a class="dropdown-item"><?=$this->transEsc('confirm_dialog_no')?></a></li>
           </ul>
         </li>
         <li class="btn-group">
@@ -80,8 +80,8 @@
             <span class="icon-link__label"><?=$this->transEsc('Empty Book Bag')?></span>
           </button>
           <ul class="dropdown-menu" role="menu" aria-labelledby="cart-empty-label">
-            <li><a id="cart-confirm-empty" title="<?=$this->transEscAttr('bookbag_confirm_empty')?>"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
-            <li><a id="cart-refuse-empty"><?=$this->transEsc('confirm_dialog_no')?></a></li>
+            <li><a id="cart-confirm-empty" class="dropdown-item" title="<?=$this->transEscAttr('bookbag_confirm_empty')?>"><?=$this->transEsc('confirm_dialog_yes')?></a></li>
+            <li><a id="cart-refuse-empty" class="dropdown-item"><?=$this->transEsc('confirm_dialog_no')?></a></li>
           </ul>
         </li>
       </ul>
