--- a/themes/bootstrap3/templates/myresearch/storageretrievalrequests.phtml
+++ b/themes/bootstrap3/templates/myresearch/storageretrievalrequests.phtml
@@ -25,17 +25,17 @@
         <div class="btn-group">
           <input id="cancelSelected" name="cancelSelected" type="submit" value="<?=$this->transEscAttr('storage_retrieval_request_cancel_selected') ?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
           <ul class="dropdown-menu">
-            <li class="disabled"><a><?=$this->transEsc('confirm_storage_retrieval_request_cancel_selected_text') ?></a></li>
-            <li><a id="confirm_cancel_selected_yes" href="#"><?=$this->transEsc('confirm_dialog_yes') ?></a></li>
-            <li><a class="confirm_cancel_no" href="#"><?=$this->transEsc('confirm_dialog_no')?></a></li>
+            <li><span class="dropdown-header"><?=$this->transEsc('confirm_storage_retrieval_request_cancel_selected_text') ?></span></li>
+            <li><a id="confirm_cancel_selected_yes" class="dropdown-item" href="#"><?=$this->transEsc('confirm_dialog_yes') ?></a></li>
+            <li><a class="dropdown-item confirm_cancel_no" href="#"><?=$this->transEsc('confirm_dialog_no')?></a></li>
           </ul>
         </div>
         <div class="btn-group">
           <input id="cancelAll" name="cancelAll" type="submit" value="<?=$this->transEscAttr('storage_retrieval_request_cancel_all') ?>" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
           <ul class="dropdown-menu">
-            <li class="disabled"><a><?=$this->transEsc('confirm_storage_retrieval_request_cancel_all_text') ?></a></li>
-            <li><a href="#" id="confirm_cancel_all_yes"><?=$this->transEsc('confirm_dialog_yes') ?></a></li>
-            <li><a class="confirm_cancel_no" href="#"><?=$this->transEsc('confirm_dialog_no')?></a></li>
+            <li><span class="dropdown-header"><?=$this->transEsc('confirm_storage_retrieval_request_cancel_all_text') ?></span></li>
+            <li><a href="#" id="confirm_cancel_all_yes" class="dropdown-item"><?=$this->transEsc('confirm_dialog_yes') ?></a></li>
+            <li><a class="dropdown-item confirm_cancel_no" href="#"><?=$this->transEsc('confirm_dialog_no')?></a></li>
           </ul>
         </div>
     <?php endif; ?>
