--- a/themes/bootstrap3/templates/search/searchbox.phtml
+++ b/themes/bootstrap3/templates/search/searchbox.phtml
@@ -120,7 +120,7 @@
             </button>
             <ul class="dropdown-menu" aria-labelledby="keyboard-selection-button">
               <li>
-                <a class="keyboard-selection-item" href="#" data-value="none"><?= $this->transEsc('None') ?></a>
+                <a class="dropdown-item keyboard-selection-item" href="#" data-value="none"><?= $this->transEsc('None') ?></a>
               </li>
               <?php foreach ($keyboardLayouts as $keyboardLayout): ?>
                 <li>
