--- a/themes/bootstrap3/templates/_ui/components/confirm-button.phtml
+++ b/themes/bootstrap3/templates/_ui/components/confirm-button.phtml
@@ -1,5 +1,5 @@
 <?php
-  $buttonId = $this->buttonId ?? 'confirm_' . $this->_invokation;
+  $buttonId = $this->buttonId ?? 'confirm_' . $this->_invocation;
   if (null === ($buttonClass = $this->buttonClass)) {
     if ($this->buttonLink) {
       $buttonClass = 'btn btn-link';
