Disable dark mode for now.
We can't support dark mode with bootstrap3 compatibility.

--- a/themes/bootstrap5/scss/bootstrap-variable-overrides.scss
+++ b/themes/bootstrap5/scss/bootstrap-variable-overrides.scss
@@ -49,3 +49,6 @@ $pagination-active-border:          $primary !default;
 
 $link-hover-decoration:             underline !default;
 $icon-link-underline-offset:        inherit !default;
+
+// Disable dark mode for now:
+$enable-dark-mode:                  false;
