Comment out dark mode variables for now.

--- a/themes/bootstrap5/scss/bootstrap.scss
+++ b/themes/bootstrap5/scss/bootstrap.scss
@@ -14,7 +14,7 @@ $fa-font-path: "../../bootstrap5/css/vendor/font-awesome/webfonts";
 
 // Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "bootstrap/scss/variables";
-@import "bootstrap/scss/variables-dark";
+//@import "bootstrap/scss/variables-dark";
 
 // Include any map overrides here
 @import "bootstrap-map-overrides";
