--- a/themes/bootstrap5/scss/bootstrap.scss
+++ b/themes/bootstrap5/scss/bootstrap.scss
@@ -514,14 +514,31 @@ ul.list-group {
 
 /* ------ Table wrapping to prevent horizontal overflow ------ */
 .table {
-  table-layout: fixed;
-  word-wrap: break-word;
+  th {
+    word-wrap: break-word;
+  }
+  &.staff-view th {
+    min-width: 30%;
+    word-wrap: anywhere;
+  }
+  td {
+    word-wrap: anywhere;
+  }
+  td.fullAvailability, td.holdings-table {
+    word-wrap: break-word;
+  }
+}
+.callnumAndLocation .table, .table.holdings-table {
+  td {
+    word-wrap: break-word;
+  }
 }
 // No wrapping for fines table in wide windows
 @media (min-width: 992px) {
   .table.fines-table {
-    table-layout: auto;
-    word-wrap: normal;
+    td, th {
+      word-wrap: normal;
+    }
   }
 }
 
