--- a/themes/bootstrap5/scss/components/search.scss
+++ b/themes/bootstrap5/scss/components/search.scss
@@ -705,6 +705,10 @@ body.rtl {
   @extend .table;
   @extend .table-striped;
   @extend .table-responsive;
+
+  td.history_results, td.history_actions {
+    word-wrap: normal;
+  }
 }
 table.search-history-table {
   table-layout: auto;
