Override the hiding of checkboxes on renewal/holds page
Fixes https://openlibraryfoundation.atlassian.net/browse/VUFIND-1684

Note — the original pull request (https://github.com/vufind-org/vufind/pull/881) intentionally hid these checkboxes on the renewal/holds page. With this commit, they remain hidden on the search results page.

--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -20,6 +20,12 @@ $thumbnail-width-large:  160px;
 @media (max-width: 767px) {
   #datevispublishDatexWrapper,
   .result .checkbox { display: none; }
+
+  // Except for these
+  #update_holds .checkbox,
+  #renewals .checkbox {
+    display: inherit;
+  }
 }
 
 .searchHomeContent { @include clearfix(); }
