--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -20,6 +20,12 @@
 @media (max-width: 767px) {
   #datevispublishDatexWrapper,
   .result .checkbox { display: none; }
+
+  // Except for these
+  #update_holds .checkbox,
+  #renewals .checkbox {
+    display: inherit;
+  }
 }
 
 .searchHomeContent { .clearfix(); }
