Limit hiding of bulk action checkboxes to searches

--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -19,13 +19,7 @@
 // Hide these on mobile
 @media (max-width: 767px) {
   #datevispublishDatexWrapper,
-  .result .checkbox { display: none; }
-
-  // Except for these
-  #update_holds .checkbox,
-  #renewals .checkbox {
-    display: inherit;
-  }
+  #search-cart-form .result .checkbox { display: none; }
 }
 
 .searchHomeContent { .clearfix(); }
