--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -19,13 +19,7 @@ $thumbnail-width-large:  160px;
 // Hide these on mobile
 @media (max-width: 767px) {
   #datevispublishDatexWrapper,
-  .result .checkbox { display: none; }
-
-  // Except for these
-  #update_holds .checkbox,
-  #renewals .checkbox {
-    display: inherit;
-  }
+  #search-cart-form .result .checkbox { display: none; }
 }
 
 .searchHomeContent { @include clearfix(); }
