Fix unwanted hiding of checkboxes on user account pages (#3560)
Fixes https://openlibraryfoundation.atlassian.net/browse/VUFIND-1684

Note — the original pull request (https://github.com/vufind-org/vufind/pull/881) unintentionally hid these checkboxes on the renewal/holds page. With this commit, they remain hidden on the search results page but are visible in account contexts.

--- a/themes/bootstrap3/scss/components/search.scss
+++ b/themes/bootstrap3/scss/components/search.scss
@@ -19,7 +19,7 @@ $thumbnail-width-large:  160px;
 // Hide these on mobile
 @media (max-width: 767px) {
   #datevispublishDatexWrapper,
-  .result .checkbox { display: none; }
+  #search-cart-form .result .checkbox { display: none; }
 }
 
 .searchHomeContent { @include clearfix(); }
