--- a/themes/bootstrap3/less/components/search.less
+++ b/themes/bootstrap3/less/components/search.less
@@ -19,7 +19,7 @@
 // Hide these on mobile
 @media (max-width: 767px) {
   #datevispublishDatexWrapper,
-  .result .checkbox { display: none; }
+  #search-cart-form .result .checkbox { display: none; }
 }
 
 .searchHomeContent { .clearfix(); }
