--- a/themes/bootstrap3/templates/RecordTab/collectionlist.phtml
+++ b/themes/bootstrap3/templates/RecordTab/collectionlist.phtml
@@ -30,7 +30,7 @@
           <input type="hidden" name="limit" value="<?=$this->escapeHtmlAttr($params->getLimit()) ?>">
           <input type="hidden" name="sort" value="<?=$this->escapeHtmlAttr($params->getSort()) ?>">
           <span class="input-group-btn">
-            <button class="btn btn-primary" type="submit" name="submit">
+            <button class="btn btn-primary" type="submit" name="submitButton">
               <span class="sr-only"><?=$this->transEsc('Search')?></span>
               <?=$this->icon('search') ?>
             </button>
