--- a/themes/bootstrap3/templates/record/addtag.phtml
+++ b/themes/bootstrap3/templates/record/addtag.phtml
@@ -9,7 +9,7 @@
 ?>
 <h2><?=$this->transEsc('Add Tags') ?></h2>
 <form method="post" name="tagRecord" class="form-add-tag" data-lightbox-onclose="refreshTagListCallback">
-  <input type="hidden" name="submit" value="1">
+  <input type="hidden" name="submitButton" value="1">
   <input type="hidden" name="id" value="<?=$this->escapeHtmlAttr($this->driver->getUniqueId())?>">
   <input type="hidden" name="source" value="<?=$this->escapeHtmlAttr($this->driver->getSourceIdentifier())?>">
   <div class="form-group">
