--- a/themes/bootstrap3/templates/record/sms.phtml
+++ b/themes/bootstrap3/templates/record/sms.phtml
@@ -42,6 +42,6 @@
   <?php endif; ?>
   <?=$this->captcha()->html($this->useCaptcha) ?>
   <div class="form-group">
-    <input class="btn btn-primary" type="submit" name="submit" value="<?=$this->transEscAttr('Send Text')?>">
+    <input class="btn btn-primary" type="submit" name="submitButton" value="<?=$this->transEscAttr('Send Text')?>">
   </div>
 </form>
