--- a/themes/bootstrap3/templates/upgrade/fixanonymoustags.phtml
+++ b/themes/bootstrap3/templates/upgrade/fixanonymoustags.phtml
@@ -21,7 +21,7 @@ an administrator) to associate with old anonymous tags.</p>
 <br>
 
 <form method="post" action="<?=$this->url('upgrade-fixanonymoustags')?>">
-  <?=$this->transEsc('Username') ?>: <input type="text" name="username"> <input type="submit" name="submit" value="<?=$this->transEscAttr('Submit') ?>"><br><br>
+  <?=$this->transEsc('Username') ?>: <input type="text" name="username"> <input type="submit" name="submitButton" value="<?=$this->transEscAttr('Submit') ?>"><br><br>
   <input type="submit" name="skip" id="skip" value="<?=$this->transEscAttr('skip_step') ?>.">
 </form>
 <?php
