--- a/themes/bootstrap3/templates/upgrade/fixduplicatetags.phtml
+++ b/themes/bootstrap3/templates/upgrade/fixduplicatetags.phtml
@@ -20,7 +20,7 @@ otherwise, it is recommended that you fix these.  Click Submit to proceed.</p>
 <br>
 
 <form method="post" action="<?=$this->url('upgrade-fixduplicatetags')?>">
-  <input type="submit" name="submit" value="<?=$this->transEscAttr('Submit') ?>"><br><br>
+  <input type="submit" name="submitButton" value="<?=$this->transEscAttr('Submit') ?>"><br><br>
   <input type="submit" name="skip" value="<?=$this->transEscAttr('skip_step') ?>." id="skip">
 </form>
 <?php
