--- a/themes/bootstrap3/templates/Auth/Database/recovery.phtml
+++ b/themes/bootstrap3/templates/Auth/Database/recovery.phtml
@@ -8,5 +8,5 @@
 </div>
 <?=$this->captcha()->html($this->useCaptcha) ?>
 <div class="form-group">
-  <input class="btn btn-primary" name="submit" type="submit" value="<?=$this->transEscAttr('Recover Account') ?>">
+  <input class="btn btn-primary" name="submitButton" type="submit" value="<?=$this->transEscAttr('Recover Account') ?>">
 </div>
