--- a/themes/bootstrap3/templates/Helpers/email-form-fields.phtml
+++ b/themes/bootstrap3/templates/Helpers/email-form-fields.phtml
@@ -36,5 +36,5 @@
 <?php endif ?>
 <?=$this->captcha()->html($this->useCaptcha) ?>
 <div class="form-group">
-  <input type="submit" class="btn btn-primary" name="submit" value="<?=$this->transEscAttr('Send')?>">
+  <input type="submit" class="btn btn-primary" name="submitButton" value="<?=$this->transEscAttr('Send')?>">
 </div>
