--- a/themes/bootstrap3/templates/myresearch/delete.phtml
+++ b/themes/bootstrap3/templates/myresearch/delete.phtml
@@ -17,7 +17,7 @@
       <?php endforeach; ?>
     </ul>
     <br>
-    <input class="btn btn-primary" type="submit" name="submit" value="<?=$this->transEscAttr('Delete')?>">
+    <input class="btn btn-primary" type="submit" name="submitButton" value="<?=$this->transEscAttr('Delete')?>">
     <?php foreach ($this->deleteIDS as $deleteID): ?>
       <input type="hidden" name="ids[]" value="<?=$this->escapeHtmlAttr($deleteID)?>">
     <?php endforeach; ?>
