--- a/themes/bootstrap3/templates/myresearch/profile.phtml
+++ b/themes/bootstrap3/templates/myresearch/profile.phtml
@@ -106,7 +106,7 @@
                 <form id="delete-login-token" method="post" action="<?=$this->url('myresearch-deletelogintoken')?>">
                   <input type="hidden" name="csrf" value="<?=$this->escapeHtmlAttr($this->auth()->getManager()->getCsrfHash())?>">
                   <input type="hidden" name="series" value="<?=$this->escapeHtmlAttr($token->series)?>">
-                  <input id="delete-login-token-submit" class="btn btn-danger" type="submit" name="submit" value="<?=$this->transEscAttr('Forget Login'); ?>" aria-labelledby="delete-login-token-submit login_platform_<?=$i?> login_date_<?=$i?>">
+                  <input id="delete-login-token-submit" class="btn btn-danger" type="submit" name="submitButton" value="<?=$this->transEscAttr('Forget Login'); ?>" aria-labelledby="delete-login-token-submit login_platform_<?=$i?> login_date_<?=$i?>">
                 </form>
               </td>
             </tr>
@@ -115,7 +115,7 @@
       </table>
       <form id="delete-user-login-tokens" method="post" action="<?=$this->url('myresearch-deleteuserlogintokens')?>">
         <input type="hidden" name="csrf" value="<?=$this->escapeHtmlAttr($this->auth()->getManager()->getCsrfHash())?>">
-        <input id="delete-user-login-tokens-submit" class="btn btn-danger" type="submit" name="submit" value="<?=$this->transEscAttr('Forget All')?>">
+        <input id="delete-user-login-tokens-submit" class="btn btn-danger" type="submit" name="submitButton" value="<?=$this->transEscAttr('Forget All')?>">
       </form>
     <?php endif; ?>
   <?php endif; ?>
