--- a/themes/bootstrap3/templates/primo/advanced.phtml
+++ b/themes/bootstrap3/templates/primo/advanced.phtml
@@ -74,7 +74,7 @@
     <?php if (!empty($lastSort)): ?>
       <input type="hidden" name="sort" value="<?=$this->escapeHtmlAttr($lastSort)?>">
     <?php endif; ?>
-    <input type="submit" class="btn btn-primary" name="submit" value="<?=$this->transEscAttr('Find')?>">
+    <input type="submit" class="btn btn-primary" name="submitButton" value="<?=$this->transEscAttr('Find')?>">
   </div>
 
   <div class="<?=$this->layoutClass('sidebar')?>">
