--- a/themes/bootstrap3/templates/record/save.phtml
+++ b/themes/bootstrap3/templates/record/save.phtml
@@ -9,7 +9,7 @@
 ?>
 <h2><?=$this->translate('add_to_favorites_html', ['%%title%%' => $this->escapeHtml($this->driver->getBreadcrumb())]) ?></h2>
 <form class="form-record-save" method="post" action="<?=$this->escapeHtmlAttr($this->recordLinker()->getActionUrl($this->driver, 'Save')) ?>" name="saveRecord" data-lightbox-onclose="VuFind.saveStatuses.refresh">
-  <input type="hidden" name="submit" value="1">
+  <input type="hidden" name="submitButton" value="1">
   <input type="hidden" name="id" value="<?=$this->escapeHtmlAttr($this->driver->getUniqueId()) ?>">
   <input type="hidden" name="source" value="<?=$this->escapeHtmlAttr($this->driver->getSourceIdentifier())?>">
   <?php if (!empty($this->containingLists)): ?>
