--- a/themes/bootstrap3/templates/upgrade/fixmetadata.phtml
+++ b/themes/bootstrap3/templates/upgrade/fixmetadata.phtml
@@ -14,7 +14,7 @@ but it will improve the user experience by allowing proper sorting of favorites 
 <br>
 
 <form method="post" action="<?=$this->url('upgrade-fixmetadata')?>">
-  <input type="submit" name="submit" value="<?=$this->transEscAttr('fix_metadata') ?>."><br><br>
+  <input type="submit" name="submitButton" value="<?=$this->transEscAttr('fix_metadata') ?>."><br><br>
   <input type="submit" name="skip" value="<?=$this->transEscAttr('skip_fix_metadata') ?>." id="skip">
 </form>
 <?php
