Fix title links missing sid

--- a/themes/bootstrap3/templates/search/results-list.phtml
+++ b/themes/bootstrap3/templates/search/results-list.phtml
@@ -20,4 +20,4 @@
     $this->resultsAttrs->add('data-history', $this->saveToHistory ? '1' : '0');
   }
 ?>
-<?=$this->render('search/list-' . $this->params->getView() . '.phtml')?>
+<?=$this->render('search/list-' . $this->params->getView() . '.phtml', ['results' => $this->results])?>
